force-app/main/default/objects/Account/fields/Activation_Date_Actual__c.field-meta.xml
<CustomField>
    <fullName>Activation_Date_Actual__c</fullName>
    <label>Activation Date (Actual)</label>
    <type>Date</type>
</CustomField>