force-app/main/default/objects/Account/fields/Apheresis_center__c.field-meta.xml
<CustomField>
    <fullName>Apheresis_center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Apheresis center</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Apheresis_Center</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>