force-app/main/default/objects/Account/fields/Cell_Therapy_Lab__c.field-meta.xml
<CustomField>
    <fullName>Cell_Therapy_Lab__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cell Therapy Lab</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please enter Cell therapy lab</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Cell_Therapy_Lab</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Cell Therapy Lab Address)</relationshipLabel>
    <relationshipName>Cell_Therapy_Lab_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>