force-app/main/default/objects/Account/fields/Hours_of_Operations_from__c.field-meta.xml
<CustomField>
    <fullName>Hours_of_Operations_from__c</fullName>
    <label>Hours of Operations from</label>
    <type>Time</type>
</CustomField>