force-app/main/default/objects/Account/fields/Hours_of_Operations_to__c.field-meta.xml
<CustomField>
    <fullName>Hours_of_Operations_to__c</fullName>
    <label>Hours of Operations to</label>
    <type>Time</type>
</CustomField>