force-app/main/default/objects/Account/fields/Inspect_IT_System_Setup__c.field-meta.xml
<CustomField>
    <fullName>Inspect_IT_System_Setup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inspect IT System Setup</label>
    <type>Checkbox</type>
</CustomField>