force-app/main/default/objects/Account/fields/Inspection_for_storage_conditions__c.field-meta.xml
<CustomField>
    <fullName>Inspection_for_storage_conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inspection for storage conditions</label>
    <type>Checkbox</type>
</CustomField>