force-app/main/default/objects/Account/fields/IP_storage_question__c.field-meta.xml
<CustomField>
    <fullName>IP_storage_question__c</fullName>
    <label>IP storage question?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>