force-app/main/default/objects/Account/fields/is_Logistic__c.field-meta.xml
<CustomField>
    <fullName>is_Logistic__c</fullName>
    <formula>CreatedBy.Id != $User.Id &amp;&amp; $User.ProfileId = CreatedBy.Profile.Id &amp;&amp; NOT(Active__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Logistic</label>
    <type>Checkbox</type>
</CustomField>