force-app/main/default/objects/Account/fields/Local_institutional_requirements__c.field-meta.xml
<CustomField>
    <fullName>Local_institutional_requirements__c</fullName>
    <inlineHelpText>Local/institutional requirements for additional patient identifiers on label?</inlineHelpText>
    <label>Local/institutional requirements?</label>
    <type>TextArea</type>
</CustomField>