force-app/main/default/objects/Account/fields/NDA_Discussed__c.field-meta.xml
<CustomField>
    <fullName>NDA_Discussed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NDA Discussed</label>
    <type>Checkbox</type>
</CustomField>