force-app/main/default/objects/Account/fields/NDA_Submitted__c.field-meta.xml
<CustomField>
    <fullName>NDA_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NDA Submitted</label>
    <type>Checkbox</type>
</CustomField>