force-app/main/default/objects/Account/fields/Person_to_contact__c.field-meta.xml
<CustomField>
    <fullName>Person_to_contact__c</fullName>
    <label>Person to contact</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>