force-app/main/default/objects/Account/fields/Preferred_days_of_collection_delivery__c.field-meta.xml
<CustomField>
    <fullName>Preferred_days_of_collection_delivery__c</fullName>
    <label>Preferred days of collection/delivery</label>
    <type>TextArea</type>
</CustomField>