force-app/main/default/objects/Account/fields/Provide_process_info_on_storage__c.field-meta.xml
<CustomField>
    <fullName>Provide_process_info_on_storage__c</fullName>
    <label>Provide process/info on storage</label>
    <type>TextArea</type>
</CustomField>