force-app/main/default/objects/Account/fields/Reason_of_Signature__c.field-meta.xml
<CustomField>
    <fullName>Reason_of_Signature__c</fullName>
    <label>Reason of Signature</label>
    <type>TextArea</type>
</CustomField>