force-app/main/default/objects/Account/fields/Receive_Certification__c.field-meta.xml
<CustomField>
    <fullName>Receive_Certification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receive Certification</label>
    <type>Checkbox</type>
</CustomField>