force-app/main/default/objects/Account/fields/Signed_MOU__c.field-meta.xml
<CustomField>
    <fullName>Signed_MOU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed MOU</label>
    <type>Checkbox</type>
</CustomField>