force-app/main/default/objects/Account/fields/Site_ID__c.field-meta.xml
<CustomField>
    <fullName>Site_ID__c</fullName>
    <label>Site ID Number</label>
    <length>12</length>
    <required>true</required>
    <type>Text</type>
</CustomField>