force-app/main/default/objects/Account/fields/Site_Number__c.field-meta.xml
<CustomField>
    <fullName>Site_Number__c</fullName>
    <label>Site Number</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>