force-app/main/default/objects/Account/fields/Staff_Training_Certification_Received__c.field-meta.xml
<CustomField>
    <fullName>Staff_Training_Certification_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Staff Training Certification Received</label>
    <type>Checkbox</type>
</CustomField>