force-app/main/default/objects/Account/fields/Study__c.field-meta.xml
<CustomField>
    <fullName>Study__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study</label>
    <referenceTo>Study_Protocol__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>