force-app/main/default/objects/Account/fields/Training_Certification_Validated__c.field-meta.xml
<CustomField>
    <fullName>Training_Certification_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Training Certification Validated</label>
    <type>Checkbox</type>
</CustomField>