force-app/main/default/objects/Account/fields/Validate_storage_compliance__c.field-meta.xml
<CustomField>
    <fullName>Validate_storage_compliance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validate storage compliance</label>
    <type>Checkbox</type>
</CustomField>