force-app/main/default/objects/Account/fields/Verify_By__c.field-meta.xml
<CustomField>
    <fullName>Verify_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Verify By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sites</relationshipName>
    <type>Lookup</type>
</CustomField>