force-app/main/default/objects/Account/fields/Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Postal_Code__c</fullName>
    <label>Zip / Postal Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>