force-app/main/default/objects/Account/recordTypes/Apheresis_Center.recordType-meta.xml
<RecordType>
    <fullName>Apheresis_Center</fullName>
    <active>true</active>
    <label>Apheresis Center</label>
</RecordType>