force-app/main/default/objects/Account/recordTypes/Cell_Therapy_Lab.recordType-meta.xml
<RecordType>
    <fullName>Cell_Therapy_Lab</fullName>
    <active>true</active>
    <label>Cell Therapy Lab</label>
</RecordType>