force-app/main/default/objects/Account/recordTypes/Clinical_Site.recordType-meta.xml
<RecordType>
    <fullName>Clinical_Site</fullName>
    <active>true</active>
    <label>Clinical Site</label>
</RecordType>