force-app/main/default/objects/Account/recordTypes/Courier.recordType-meta.xml
<RecordType>
    <fullName>Courier</fullName>
    <active>true</active>
    <label>Courier</label>
</RecordType>