force-app/main/default/objects/Account/recordTypes/Manufacturing_Site.recordType-meta.xml
<RecordType>
    <fullName>Manufacturing_Site</fullName>
    <active>true</active>
    <label>Manufacturing Site</label>
</RecordType>