force-app/main/default/objects/Account/validationRules/Check_Hours_of_op.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Hours_of_op</fullName>
    <active>true</active>
    <errorConditionFormula>IF( NOT( ISNULL(Hours_of_Operations_from__c))  , 
IF( ISNULL(Hours_of_Operations_to__c), true, false), 
false)</errorConditionFormula>
    <errorDisplayField>Hours_of_Operations_to__c</errorDisplayField>
    <errorMessage>Please fill the &quot;Hours of operation to&quot; field</errorMessage>
</ValidationRule>