force-app/main/default/objects/Account/validationRules/Phone_number_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_number_validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    NOT(ISNUMBER( Phone_No__c )),
    LEN(Phone_No__c ) &lt;&gt; 10
)</errorConditionFormula>
    <errorDisplayField>Phone_No__c</errorDisplayField>
    <errorMessage>Please enter valid phone number</errorMessage>
</ValidationRule>