force-app/main/default/objects/Account/validationRules/Validation_for_name.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_for_name</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
    CONTAINS( Name , &quot;0&quot;),
    CONTAINS( Name , &quot;1&quot;),
    CONTAINS( Name , &quot;2&quot;),
    CONTAINS( Name , &quot;3&quot;),
    CONTAINS( Name , &quot;4&quot;),
    CONTAINS( Name , &quot;5&quot;),
    CONTAINS( Name , &quot;6&quot;),
    CONTAINS( Name , &quot;7&quot;),
    CONTAINS( Name , &quot;8&quot;),
    CONTAINS( Name , &quot;9&quot;)
)</errorConditionFormula>
    <errorMessage>Please enter valid name</errorMessage>
</ValidationRule>