force-app/main/default/objects/Account/listViews/All_Apheresis_Centre.listView-meta.xml
<ListView>
    <fullName>All_Apheresis_Centre</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Site_ID__c</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Site_Status__c</columns>
    <columns>Email__c</columns>
    <columns>Phone_No__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Apheresis_Center</value>
    </filters>
    <label>All Apheresis Centre</label>
</ListView>