force-app/main/default/objects/Account/listViews/All_Clinical_Sites.listView-meta.xml
<ListView>
    <fullName>All_Clinical_Sites</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Apheresis_center__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Clinical_Site</value>
    </filters>
    <label>All Clinical Sites</label>
</ListView>