force-app/main/default/objects/Account/listViews/All_Manufacturing_Sites.listView-meta.xml
<ListView>
    <fullName>All_Manufacturing_Sites</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Manufacturing_Site</value>
    </filters>
    <label>All Manufacturing Sites</label>
</ListView>