force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Site_ID__c</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Site_Status__c</columns>
    <columns>Email__c</columns>
    <columns>Phone_No__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Sites</label>
</ListView>