force-app/main/default/objects/Account/listViews/Cell_Therapy_Lab.listView-meta.xml
<ListView>
    <fullName>Cell_Therapy_Lab</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Site_ID__c</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Site_Status__c</columns>
    <columns>Email__c</columns>
    <columns>Phone_No__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Cell_Therapy_Lab</value>
    </filters>
    <label>All Cell Therapy Lab</label>
</ListView>